force-app/main/default/objects/Studentmaster__c/fields/Cities__c.field-meta.xml
<CustomField>
    <fullName>Cities__c</fullName>
    <label>Cities</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Countries__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New York City</fullName>
            </value>
            <value>
                <fullName>Nashvville</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>