force-app/main/default/objects/Studentmaster__c/fields/MaxStudentMark__c.field-meta.xml
<CustomField>
    <fullName>MaxStudentMark__c</fullName>
    <label>MaxStudentMark</label>
    <summarizedField>Studentmarks__c.Marks__c</summarizedField>
    <summaryForeignKey>Studentmarks__c.Studentmaster__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>