force-app/main/default/objects/Studentmaster__c/fields/TotalMarks__c.field-meta.xml
<CustomField>
    <fullName>TotalMarks__c</fullName>
    <label>TotalMarks</label>
    <summarizedField>Studentmarks__c.Marks__c</summarizedField>
    <summaryForeignKey>Studentmarks__c.Studentmaster__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>