force-app/main/default/objects/Studentmaster__c/validationRules/CheckAgeandConfirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgeandConfirmed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Age__c &lt; 19)</errorConditionFormula>
    <errorMessage>Age cant be less than 19</errorMessage>
</ValidationRule>