force-app/main/default/objects/Studentmaster__c/validationRules/CheckConfirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckConfirmed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Confirmed__c = true, ISNEW())</errorConditionFormula>
    <errorDisplayField>Confirmed__c</errorDisplayField>
    <errorMessage>Confirmed cannot be true.</errorMessage>
</ValidationRule>